Implemented Post flagging.
