# routes/api.php
@@ -6,6 +6,7 @@ $router->group(['prefix' => 'api'], function() use ($router) {
     $router->get('posts/{id}', 'PostController@findById');
     $router->post('posts', 'PostController@save');
     $router->delete('posts/{id}', 'PostController@delete');
+    $router->put('posts/{id}/flag', 'PostController@flag');
 
     $router->get('categories', 'PostController@findCategories');
 });
